--- a/Todo/app/templates/base.html
+++ b/Todo/app/templates/base.html
@@ -10,7 +10,7 @@
 
  <div class="container">
       <div class="header clearfix">
-        <h3 class="text-muted">极客学院Todo</h3>
+        <h3 class="text-muted">Todo</h3>
       </div>
 
       <div class="jumbotron">
@@ -19,7 +19,7 @@
       </div>
 
       <footer class="footer">
-        <p>&copy; jikexueyuan 2015</p>
+        <p>&copy; NCZkevin</p>
       </footer>
 
     </div> <!-- /container -->
